force-app/main/default/objects/TiposIncidencias__c/TiposIncidencias__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Tipos incidencias</label>
</CustomObject>