force-app/main/default/objects/TiposIncidencias__c/fields/Idioma__c.field-meta.xml
<CustomField>
    <fullName>Idioma__c</fullName>
    <label>Idioma</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>