force-app/main/default/objects/TiposIncidencias__c/fields/Name_Texto_ES__c.field-meta.xml
<CustomField>
    <fullName>Name_Texto_ES__c</fullName>
    <description>Name del registro del tipo de incidencia en idioma ES.</description>
    <inlineHelpText>Name del registro del tipo de incidencia en idioma ES.</inlineHelpText>
    <label>Name_Texto_ES</label>
    <length>80</length>
    <type>Text</type>
</CustomField>