force-app/main/default/objects/TiposIncidencias__c/fields/Texto__c.field-meta.xml
<CustomField>
    <fullName>Texto__c</fullName>
    <label>Texto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>