force-app/main/default/objects/TiposIncidencias__c/listViews/Tipos_incidencia.listView-meta.xml
<ListView>
    <fullName>Tipos_incidencia</fullName>
    <columns>NAME</columns>
    <columns>Idioma__c</columns>
    <columns>Texto__c</columns>
    <columns>Name_Texto_ES__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tipos incidencia</label>
    <language>es</language>
</ListView>